# fast-api-crud

./: .gitignore  ReadMe.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0a09b4cfebab_.py  7d120b9be100_.py
api/: blogRouter.py
config/: constants.py
db/: db_setup.py
db/models/: blogModel.py
schema/: blog_schema.py
