[tool.poetry]
name = "fast-api-crud"
version = "0.1.0"
description = ""
authors = ["fu-ry17"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.40"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
